# -mobile-robot-project-with-odometry

autocar/: CMakeLists.txt
autocar/include/: FreeRTOSConfig.h  encoder_task.h  motor_control.h  ultrasonic_task.h
autocar/src/: encoder_task.c  main.c  motor_control.c  ultrasonic_task.c  vTaskTest.c
